Fix bug around button visibility

--- a/polaris-react/src/components/DataTable/DataTable.scss
+++ b/polaris-react/src/components/DataTable/DataTable.scss
@@ -185,6 +185,14 @@ $breakpoint: 768px;
   padding: var(--p-space-2);
   margin: var(--p-space-2);
 
+  [data-sticky-active] & {
+    visibility: hidden;
+  }
+
+  [data-sticky-active] .StickyTable & {
+    visibility: visible;
+  }
+
   .IncreasedTableDensity & {
     font-weight: var(--p-font-weight-medium);
     font-size: var(--p-font-size-1);
